# raytracer_optimisation

./: CMakeLists.txt  banchmark.md  main.cpp
scenes/: empty.json
src/raymath/: AABB.cpp  AABB.hpp  Ray.cpp  Ray.hpp  Transform.cpp  Transform.hpp  Vector3.cpp
src/rayscene/: BSPNode.cpp  BSPNode.hpp  BSPTree.cpp  BSPTree.hpp  CMakeLists.txt  Camera.cpp  Mesh.cpp  Mesh.hpp  PhongMaterial.cpp  Plane.cpp  Plane.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/tests/: CMakeLists.txt  e2e_tests.cpp
